edit img source

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="heading">
-        <img src="/IMG/logo.png" alt="Logo">
+        <img src="../IMG/logo.png" alt="Logo">
         <h1>KFC</h1>
     </div>
 
@@ -38,7 +38,7 @@
             </i>
             Ngoài thực đơn gà rán, KFC còn đa dạng hóa sản phẩm tạo nên thực đơn vô cùng phong phú dành cho người tiêu dùng trên toàn thế giới có thể thưởng thức hơn 300 món ăn khác nhau từ món gà nướng tại thị trường Việt Nam cho tới sandwich cá hồi tại Nhật Bản.
         </p>
-        <img src="/IMG/about-pic-1.png" alt="about-pic-1">
+        <img src="../IMG/about-pic-1.png" alt="about-pic-1">
     </div>
 
     <div id="PhatTrien"> 
@@ -52,7 +52,7 @@
             <li>Tháng 05/2008 - Huế</li>    
             <li>Tháng 11/2009 - Đà Nẵng</li>    
         </ul>
-        <img src="/IMG/about-pic-3.png" alt="about-pic-3">
+        <img src="../IMG/about-pic-3.png" alt="about-pic-3">
     </div>
 
     <div id="table-nuoc-di-kem">
